# Coordinate_transformer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml
config/: sample_config.yaml  test_integration_config.yaml
docs/doxygen/html/: README_8md.html  annotated.html  classTestCoordinateTransformer-members.html  classTestCoordinateTransformer.html  classTestCoordinateTransformer__coll__graph.md5  classTestCoordinateTransformer__inherit__graph.map  classTestCoordinateTransformer__inherit__graph.md5  classcoordinate__transformer_1_1CoordinateTransformer-members.html  classcoordinate__transformer_1_1CoordinateTransformer.html  classcoordinate__transformer_1_1TestTransformerNode-members.html  classcoordinate__transformer_1_1TestTransformerNode.html  classcoordinate__transformer_1_1TestTransformerNode__coll__graph.map  classcoordinate__transformer_1_1TestTransformerNode__inherit__graph.md5  classes.html  classtest__full__transform_1_1TestCoordinateTransformerActive-members.html  classtest__full__transform_1_1TestCoordinateTransformerActive.html  classtest__full__transform_1_1TestCoordinateTransformerActive__inherit__graph.map  classtest__full__transform_1_1TestCoordinateTransformerActive__inherit__graph.md5  classtest__full__transform_1_1TestProcessExitCodes-members.html  classtest__full__transform_1_1TestProcessExitCodes.html  classtest__full__transform_1_1TestProcessExitCodes__coll__graph.map  classtest__full__transform_1_1TestProcessExitCodes__inherit__graph.md5  coordinate__transformer_8cpp.html  coordinate__transformer_8cpp__incl.map  coordinate__transformer_8cpp__incl.md5  coordinate__transformer_8hpp.html  coordinate__transformer_8hpp__dep__incl.map  coordinate__transformer_8hpp__dep__incl.md5  coordinate__transformer_8hpp__incl.map  coordinate__transformer_8hpp__incl.md5  coordinate__transformer_8hpp_source.html  dir_000004_000002.html  dir_000006_000002.html  dir_06cf58238ff9fdc8d3224b18b5262523.html  dir_06cf58238ff9fdc8d3224b18b5262523_dep.map  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  (+52 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_3.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+23 more)
docs/doxygen/latex/: annotated.tex  classTestCoordinateTransformer.tex  classTestCoordinateTransformer__coll__graph.md5  classTestCoordinateTransformer__inherit__graph.md5  classcoordinate__transformer_1_1CoordinateTransformer.tex  classcoordinate__transformer_1_1TestTransformerNode.tex  classcoordinate__transformer_1_1TestTransformerNode__inherit__graph.md5  classtest__full__transform_1_1TestCoordinateTransformerActive.tex  classtest__full__transform_1_1TestCoordinateTransformerActive__coll__graph.md5  classtest__full__transform_1_1TestProcessExitCodes.tex  classtest__full__transform_1_1TestProcessExitCodes__coll__graph.md5  coordinate__transformer_8cpp.tex  coordinate__transformer_8cpp__incl.md5  coordinate__transformer_8hpp.tex  coordinate__transformer_8hpp__dep__incl.md5  coordinate__transformer_8hpp__incl.md5  coordinate__transformer_8hpp_source.tex  dir_06cf58238ff9fdc8d3224b18b5262523.tex  dir_06cf58238ff9fdc8d3224b18b5262523_dep.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_6a07fdbc4b50e86806a88566ca8f66e4.tex  dir_6a07fdbc4b50e86806a88566ca8f66e4_dep.md5  dir_9f351d46ce3cc29445a41dc3a31e6919.tex  dir_bbf9f1b56ba6c621651be8934a24eced.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  index.tex  namespacecoordinate__transformer.tex  namespaces.tex  namespacetest__full__transform.tex  refman.tex  result__status_8hpp.tex  result__status_8hpp__dep__incl.md5  result__status_8hpp_source.tex  sample__config_8yaml.tex  structcoordinate__transformer_1_1Bounds.tex  test__full__transform_8py.tex  test__integration__config_8yaml.tex  (+4 more)
include/coordinate_transformer/: coordinate_transformer.hpp  result_status.hpp
launch/: transformer.launch.py
src/: coordinate_transformer.cpp  test_transformer_node.cpp
test/integration/: test_full_transform.py
test/unit/: test_transformer_logic.cpp
