<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coordinate_transformer</name>
  <version>0.1.0</version>
  <description>A C++ library for coordinate transformations with boundary checks for ROS2.</description>
  <maintainer email="muhametsafin.r@yandex.ru">User</maintainer>
  <license>Apache-2.0</license> <!-- Или другая лицензия -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cpplint</test_depend>
  <test_depend>ament_uncrustify</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>rclpy</test_depend>
  
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_black</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>